# ffmpeg_kit_flutter

./: CHANGELOG.md  README.md  pubspec.yaml
android/: build.gradle
android/src/main/cpp/: CMakeLists.txt  hidapi_compat.c
android/src/main/java/com/antonkarpenko/ffmpegkit/: FFmpegKitFlutterPlugin.java  FFmpegSessionExecuteTask.java
example/lib/: main.dart
scripts/: setup_ios.sh  setup_macos.sh
